admin/styles/userSubview.css
#userSearchForm
{
	margin-bottom: 50px;
	margin-top: 20px;
}

#userSearchBox
{
	margin-right: 10px;
	width: 179px;
}

#roleSearchFilter, #groupSearchFilter
{
	margin-right: 10px;
}

.selectFilterSpecial
{
	font-style: italic;
}

#userSearchButton, #userSearchCancel
{
	margin-bottom: -11px;
}

.userTable
{
	border: none;
}

.userTable th
{
	border: none;
	border-bottom: 1px solid #bfbfbf;
	text-align: left;
}

.userTable td
{
	border: none;
	padding: 15px 20px;
}

.userTable td + td, .userTable th + th
{
	padding-left: 50px;
}

.userTable tr:nth-child(2n+1)
{
	background-color: #ffffff;
}

.thumbnailContainer
{
	display: inline-block;
	margin-top: 50px;
	position: relative;
	text-align: center;
	width: 256px;
}

.buttonContainer
{
	display: inline-block;
	position: relative;
	width: fit-content;
}

.thumbnailImage
{
	cursor: pointer;
	transform: scale(0.9);
	transition: transform ease 0.15s;
	vertical-align: middle;
}

.thumbnailImage:hover
{
	transform: scale(1.0);
}

.deleteImage
{
	bottom: 5%;
	margin-bottom: 6px;
	margin-right: 8px;
	position: absolute;
	right: 5%;
}

.previewImage
{
	bottom: 0;
	left: 0;
	margin: auto;
	position: absolute;
	right: 0;
	top: 0;
}

#roleSelect
{
	margin-bottom: 60px;
}

.roleText
{
	font-weight: bold;
}

.roleHelp, .groupHelp
{
	margin-top: 20px;
}

.roleHelpName
{
	font-weight: bold;
}

